// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Alert story renders snapshot 1`] = `
<div
  class="toastDialog colorAlert"
>
  <div
    class="content"
  >
    <div
      class="icon iconAlert"
    >
      <svg
        class="svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          alert
        </title>
        <circle
          cx="15.5"
          cy="9.5"
          r="1.5"
        />
        <circle
          cx="8.5"
          cy="9.5"
          r="1.5"
        />
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-6c-2.33 0-4.32 1.45-5.12 3.5h1.67c.69-1.19 1.97-2 3.45-2s2.75.81 3.45 2h1.67c-.8-2.05-2.79-3.5-5.12-3.5z"
        />
      </svg>
    </div>
    <p
      class="typography sizeSm colorInherit"
    >
      You've got toast!
    </p>
  </div>
</div>
`;

exports[`<Toast /> Dismissable story renders snapshot 1`] = `
<div
  class="toastDialog colorSuccess"
>
  <div
    class="content"
  >
    <div
      class="icon iconSuccess"
    >
      <svg
        class="svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          success
        </title>
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </div>
    <p
      class="typography sizeSm colorInherit"
    >
      You've got toast!
    </p>
  </div>
  <button
    class="dismiss button variantLink colorSuccess"
    type="button"
  >
    ​
    <svg
      class="svgIcon"
      fill="currentColor"
      height="32px"
      role="img"
      viewBox="0 0 24 24"
      width="32px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        close
      </title>
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Toast /> Success story renders snapshot 1`] = `
<div
  class="toastDialog colorSuccess"
>
  <div
    class="content"
  >
    <div
      class="icon iconSuccess"
    >
      <svg
        class="svgIcon"
        fill="currentColor"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          success
        </title>
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </div>
    <p
      class="typography sizeSm colorInherit"
    >
      You've got toast!
    </p>
  </div>
</div>
`;
